syntax = "proto3";

package golem.common;

import "golem/common/uuid.proto";

message EnvironmentId {
  UUID value = 1;
}
